src/test/ui/consts/match_ice.stderr
error: to use a constant or static of type `S` in a pattern, `S` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match_ice.rs:11:9
   |
LL |         C => {}
   |         ^

error: aborting due to previous error

